don't force logo width and height (bug 38832)
use css to ensure aspect ratio is not broken and image
stretched

--- a/stylesheets/mf-navigation-legacy.css
+++ b/stylesheets/mf-navigation-legacy.css
@@ -62,11 +62,13 @@ full screen search css
 
 #mw-mf-logo {
 	position: absolute;
-	height: 22px;
+	max-height: 22px;
 	cursor: pointer;
 	left: 22px;
 	top: 9px;
-	width: 35px;
+	max-width: 35px;
+	width: auto;
+	height: auto;
 }
 
 @media all and (max-width: 320px) {
